5683 Nullsjekk. Postnummer kan være null (#1928)