@@ -1,8 +1,9 @@
 package no.nav.melosys.domain.person.adresse;
 
-import java.time.LocalDate;
-
 import no.nav.melosys.domain.adresse.StrukturertAdresse;
+import org.apache.commons.lang3.StringUtils;
+
+import java.time.LocalDate;
 
 public record Bostedsadresse(
     StrukturertAdresse strukturertAdresse,
@@ -16,6 +17,6 @@ public record Bostedsadresse(
 
     @Override
     public boolean harRegistrertAdresse() {
-        return strukturertAdresse != null && !strukturertAdresse.erTom() && !strukturertAdresse.getPostnummer().isBlank();
+        return strukturertAdresse != null && !strukturertAdresse.erTom() && !StringUtils.isBlank(strukturertAdresse.getPostnummer());
     }
 }
