@@ -5,6 +5,7 @@ import java.time.LocalDateTime;
 
 import no.nav.melosys.domain.adresse.SemistrukturertAdresse;
 import no.nav.melosys.domain.adresse.StrukturertAdresse;
+import org.apache.commons.lang3.StringUtils;
 
 public record Kontaktadresse(
     StrukturertAdresse strukturertAdresse,
@@ -21,8 +22,9 @@ public record Kontaktadresse(
     @Override
     public boolean harRegistrertAdresse() {
         StrukturertAdresse adresse = hentEllerLagStrukturertAdresse();
-        return adresse != null && !adresse.erTom() && !adresse.getPostnummer().isBlank();
+        return adresse != null && !adresse.erTom() && !StringUtils.isBlank(adresse.getPostnummer());
     }
+
     public StrukturertAdresse hentEllerLagStrukturertAdresse() {
         if (strukturertAdresse != null) {
             return strukturertAdresse;
